<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserPoints"
    android:background="@color/orange">

    <View
        android:id="@+id/topDivider"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/rndBtnYellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="User Points"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="116dp"
        android:layout_height="70dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="51dp"
        android:text="@string/Totalpoints"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topDivider" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="121dp"
        android:layout_height="65dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="122dp"
        android:layout_marginEnd="16dp"
        android:text="@string/Recently"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/divider2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="89dp"
        android:text="@string/donations"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <View
        android:id="@+id/divider2"
        android:layout_width="6dp"
        android:layout_height="600dp"
        android:layout_marginTop="100dp"
        android:background="#900E0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="191dp"
        android:layout_height="97dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/topDivider" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="191dp"
        android:layout_height="97dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="12dp"
        android:text="$10,000"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="189dp"
        android:layout_height="215dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="41dp"
        android:text="McDonalds \n Osmows \n Pizza Nova \n Salad King \n Pizza Pizza"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/donate_btn"
        android:onClick="toMainpage"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/topDivider"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>